2008-03-12 Jesse Kornblum <md5deep@jessekornblum.com>
	
	* Added strsep (and appropriate autoconf/automake checks)
	  in place to ugly homebrew code to separate out string 
	  values. This is for one instance in match.c, need to update
	  the others.


2008-03-11 Jesse Kornblum <md5deep@jessekornblum.com>

	* Separated the functions to display positive and negative
	  match results. Cleaned up the function names for this too.
	  Also updated audit mode so that it appears to work.

	* Documented -M and -X mode in usage message.

	* Updated file_* types used in include/common.h to avoid
	  the conflict with file_unknown. Moved filetype_t to
	  include/common.h as well. 

	* Starting to write code to load files of known hashes 

	* Fixed obscure bug in md5deep/files.c when checking for 
	  EnCase hash files when loading a very small known file.
	

2008-03-07 Jesse Kornblum <md5deep@jessekornblum.com>

	* Updating audit mode to not use is_known_file
	  function. This should help make the code cleaner.

	* Fixed file_data_compare to handle files where
	  the first hash doesn't match but the rest of 
	  them do.

	* Added WSTRINGS_EQUAL(A,B) macro to compare two TCHARs.
	

2008-03-06 Jesse Kornblum <md5deep@jessekornblum.com>

	* Reworked hashtable code to return a linked list of 
	  file_data_t values, complete with status values.
	  This required me to slightly alter how the program
	  stores the computed hashes. The current version works,
	  but is ugly as all get out. It's a great proof of
	  concept, that's all.


2008-03-04 Jesse Kornblum <md5deep@jessekornblum.com>

	* Working on hashdeep matching, auditing code

	* Added a file_data_t, known, to the hashdeep state variable
	

2008-03-04 Jesse Kornblum <md5deep@jessekornblum.com>

	* Added spaces to recorded command line in output files.
	

2008-02-22 Jesse Kornblum <md5deep@jessekornblum.com>

	* Moved source code from CVS to Subversion repository.
	  This shouldn't create any changes in the code, but