@@ -286,11 +286,10 @@ static int read_file(state *s, char *fn, FILE *handle)
     }
 
     /* The last value is always the filename */
-    /* RBF - We must convert the filename to a TCHAR */
-
+#ifdef _WIN32
     size_t sz = strlen(argv[i]);
     t->file_name = (TCHAR *)malloc(sizeof(TCHAR) * sz);
-    // RBF - Error check if t->file_name is null
+      fatal_error(s,"%s: Out of memory", __progname);
 
     if (MultiByteToWideChar(CP_UTF8,
 			    MB_PRECOMPOSED,
@@ -298,9 +297,13 @@ static int read_file(state *s, char *fn, FILE *handle)
 			    sz,
 			    t->file_name,
 			    sz))
-      fatal_error(s,"RBF failed");
-
-      //    t->file_name = _tcsdup(_TEXT(argv[i]));
+      fatal_error(s,"%s: Out of memory", __progname);
+#else
+    t->file_name = strdup(argv[i]);
+    if (NULL == t->file_name)
+      fatal_error(s,"%s: Out of memory", __progname);
+#endif
+    
     
 #ifdef DEBUG
     display_file_data(s,t);
